# semantic-scholar-cli

./: .gitignore  PKGBUILD  README.md  pyproject.toml  semantic-scholar-tool-0.1.0.r25.gc128126-1-any.pkg.tar.zst
.github/workflows/: ci.yml  package-drift.yml  packaging-drift.yml  release.yml
src/semantic_scholar_tool/: cli.py  config.py  core.py  http.py
tests/: test_cli.py  test_config.py  test_core.py  test_service.py
