[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-scholar-tool"
version = "0.1.0"
description = "Semantic Scholar Academic Graph CLI"
license = "0BSD"
requires-python = ">=3.13"
readme = "README.md"

[project.urls]
Homepage = "https://api.semanticscholar.org/"
Documentation = "https://api.semanticscholar.org/api-docs/graph"

[project.scripts]
semantic-scholar = "semantic_scholar_tool.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["semantic_scholar_tool*"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.13"
files = ["src/semantic_scholar_tool"]
warn_unused_configs = true
